##
## XML exchange: NeuroML and NineML support for genesis 3.
##

##############################################################################
##'
##' XML exchange
##'
##' Copyright (C) 2007-2008 Hugo Cornelis
##'
##' Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

perldir = $(prefix)/glue/swig/perl

nobase_dist_perl_DATA = @PERL_MODULES@

perldatadir = $(prefix)/neurospaces/exchange

nobase_dist_perldata_DATA = @PERL_DATA@

