##
## XML exchange: NeuroML and NineML support for genesis 3.
##

##############################################################################
##'
##' XML exchange
##'
##' Copyright (C) 2007-2008 Hugo Cornelis
##'
##' Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

#t automake does not allow to pass in arguments for tests ?

check_SCRIPTS = \
	$(srcdir)/neurospaces_harness

dist_noinst_SCRIPTS =

TESTS = $(srcdir)/neurospaces_harness

test: check

